before fixing speed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/main.cpp src/CarDriver.cpp src/CarDriver.h src/DrivingConstraints.cpp src/DrivingConstraints.h src/CarModel.h src/WorldMap.cpp src/WorldMap.h src/CarModel.cpp)
+set(sources src/main.cpp src/CarDriver.cpp src/CarDriver.h src/CarModel.h src/WorldMap.cpp src/WorldMap.h src/CarModel.cpp src/CostCalculator.cpp src/CostCalculator.h src/utils.h)
 
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
